force-app/main/default/objects/Case/fields/esriMap_Address__c.field-meta.xml
<CustomField>
    <fullName>esriMap_Address__c</fullName>
    <label>esriMap - Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>