force-app/main/default/objects/Case/fields/esriMap_Latitude__c.field-meta.xml
<CustomField>
    <fullName>esriMap_Latitude__c</fullName>
    <description>Latitude synchronisée depuis Map_Area__c pour l'intégration cartographique ESRI</description>
    <label>Latitude (ESRI Map)</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>