force-app/main/default/objects/Case/fields/esriMap_Location__c.field-meta.xml
<CustomField>
    <fullName>esriMap_Location__c</fullName>
    <label>esriMap - Géolocalisation</label>
    <type>Location</type>
</CustomField>