force-app/main/default/objects/Case/fields/esriMap_Longitude__c.field-meta.xml
<CustomField>
    <fullName>esriMap_Longitude__c</fullName>
    <label>esriMap - Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>